# modlunky2

./: Cargo.toml  requirements-dev.txt  requirements.txt
src/launcher/: Cargo.toml
src/libs/ml2_assets/: Cargo.toml
src/libs/ml2_mods/: Cargo.toml
src/libs/ml2_mods/examples/: api.rs  mods.rs
src/libs/ml2_mods/src/: data.rs  manager.rs
src/libs/ml2_mods/src/spelunkyfyi/: demo.rs  http.rs
src/libs/ml2_net/: Cargo.toml
src/libs/ml2_net/src/: http.rs
src/libs/ml2_play/: Cargo.toml
src/libs/ml2_play/examples/: playlunky.rs
src/libs/ml2_play/src/: binary.rs  config.rs  data.rs  lib.rs  manager.rs
src/modlunky2/tasks/: manager.py  register.py  tkinter.py
src/modlunky2/ui/: extract.py  install.py  overlunky.py  pack.py  tasks.py  websocket.py
src/modlunky2/ui/play/: controls.py  packs.py  play.py  releases.py
src/tauri/: package-lock.json  package.json
src/tauri/src-tauri/: Cargo.toml
src/tauri/src-tauri/src/: main.rs
