[package]
name = "ml2_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backoff = "0.4"
derivative = "2.2"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
hyper-tls = "0.5"
instant = "0.1"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = {version = "1.21", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["follow-redirect", "sensitive-headers", "set-header", "trace", "util"] }
tracing = "0.1"
