[package]
name = "ml2_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
anyhow = "1.0"
async-trait = "0.1"
derivative = "2.2"
ml2_net = { path = "../ml2_net" }
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = {version = "1.21", features = ["fs", "process", "sync"] }
tokio-graceful-shutdown = "0.11"
toml = "0.5"

[dev-dependencies]
clap = {version = "4.0", features = ["derive"]}
directories = "4.0"
tracing-subscriber = "0.3"
